# marvin

./: .env.sample  Dockerfile  Makefile  README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  post-create.sh
app/: main.py  settings.py
app/docs/: ft_bkk_rules.md
app/handlers/: rule_chat.py
app/services/account/: links.py
app/services/ai/oai/: classifiers.py  client.py  completions.py  prompts.py
app/services/chat/: utils.py
tests/: __init__.py  test_oai.py
