[project]
name = "marvin"
version = "0.1.0"
description = "42 discord general purpose bot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.4.0",
    "logfire>=3.10.0",
    "nanoid>=2.0.0",
    "openai>=1.65.1",
    "pydantic-settings>=2.6.1",
    "pytest-asyncio>=0.25.2",
    "rich>=13.9.4",
]

[dependency-groups]
dev = [
    "pytest-xdist>=3.6.1",
]
